<resources>
    <string name="app_name">Diplom-project</string>
    <string name="Light">Light</string>
    <string name="Contacts_text">Контакты:</string>
    <string name="About_text">Телефон: 8-913-019-67-27</string>
    <string name="Main_scene_text">Почта: \ndanil.rybnikov@mail.ru</string>
    <string name="Logo_of_app_1">Digital</string>
    <string name="Logo_of_app_2">Fix</string>
    <string name="course_start_date">Старт обучения:</string>
    <string name="course_level">Уровень:</string>
    <string name="course_desc">За программу вы изучите: \n - Составные части телефона \n - Детали шлейфа и датчики \n - Методы диагностики и поиски неисправностей \n - Разбор часто встречающихся поломок</string>
    <string name="activityInfo"> - Помимо академии по ремонту цифровой техники, мы являемся действующим сервисным центром. \n \n - Мы обучаем в неформальной атмосфере, где Вы будете чувствовать себя, свободно и легко. Подстроим обучающую программу индивидуально под Вас. \n \n - С нами Вы научитесь работать на современном оборудовании и примените полученные знания в реальных задачах. Улучшите навыки и выйдете на новый уровень дохода.\n \n - Также после прохождения любого курса, Вы получите доступ к закрытому чату мастеров, где сможете общаться с единомышленниками, и задавать любые интересующие Вас вопросы, получите помощь по диагностике и ремонту. Помимо этого, мы также поможем с трудоустройством. \n \n - Кроме того, в нашем сервисном центре, вы сможете отремонтировать любое ваше устройство, качественно и не дорого. Цену на ремонт Вы узнаете, после бесплатной диагностики. \n \n - Адрес: г. Новосибирск, ул. Мясниковой, 22. Офис 210. \n</string>
    <string name="SilaToka1">Электрический ток обладает силой? Да, представьте себе... А для чего нужна сила? Ну как для чего, для того, чтобы совершать полезную работу, а можно и не полезную, главное, чтобы что-то делать. Наше тело тоже обладает силой, у кого-то сила такая, что может одним ударом раздолбать кирпич в пух и прах, другой же не сможет даже и ложку поднять. Так вот и электрический ток обладает силой. \n \n Представьте себе шланг, с которого вы поливаете свой огород: \n</string>
    <string name="Sopr1">Как вы поняли, сопротивление, от слова "сопротивляться". Различные вещи и электронные компоненты по разному сопротивляются электрическому току. Вот вас колбасило из стороны в сторону. Ваша лампочка на потолке тоже сопротивляется электрическому току, освещая комнату. Ноутбук, с которого Вы читаете эту статью, тоже сопротивляется, высвечивая вам на дисплее эту статейку, и наконец электрический чайник на кухне сопротивляется так, что даже превращает воду в кипяток! Разные вещи обладают различным по величине сопротивлением и по разному себя ведут. Что-то греется, что-то крутится (кулер от компа), что-то светится, что-то говорит (радио).\n\nВ электронике есть такое понятие Ом. Но как понять, что такое Ом? Для этого давайте разберемся вот с такой схемкой:</string>
    <string name="Sopr2">Буковки в кружочках - это измерительные приборы:</string>
    <string name="Sopr3">Вольтметр служит для измерения напряжения, а амперметр - для измерения силы тока.\n\n Итак, если пропустить по проводку электрический ток с силой тока в 1 Ампер, а на концах этого провода у нас будет напряжение в 1 Вольт, то значит этот проводок у нас обладает сопротивлением в 1 Ом.</string>
    <string name="Sopr4">В электронике и электрике сопротивление обозначается буквой R. Некоторые вещи имеют очень много Ом, то есть очень большое сопротивление. А некоторые вещи имеют очень мало Ом, то есть очень маленькое сопротивление. Например, человек имеет сопротивление от нескольких сотен Ом и до 100 КилоОм. Для расчетов берут 1 КилоОм. Сопротивление человеческого тела зависит от многих факторов, таких как пол, возраст, состояние кожи, сила прикосновения проводников к коже, уровень алкоголя в крови и тд.\n\nМедный провод длиной в метр и сечением в 1 мм2 имеет сопротивление 0,1 Ом.\n\nНо давайте же рассмотрим сопротивление с точки зрения гидравлики, как мы это делали с напряжением. Что же будет являться сопротивлением для потока воды и какие факторы влияют на сопротивление?\n\nСадовый шланг или нефтяная труба будут оказывать бОльшее сопротивление потоку воды?</string>
    <string name="Sopr7">У какого шланга будет больше сопротивление потоку воды? Думаю, у того, который длиннее.\n\nКак ни странно, но дела с проводом обстоят точно также. Чем тоньше и длиннее проводок, тем больше его сопротивление электрическому току. Также смотря из какого материала он сделан. Различные материалы по разному проводят электрический ток. Есть те, которые замечательно проводят ток, а есть те, которые почти не пропускают через себя электрический ток.\n\nПоэтому, сопротивление проводка можно описать одной формулой:</string>
    <string name="Sopr8">В технике до сих пор применяется устаревшая единица измерения удельного сопротивления Ом х мм2/м. Чтобы перевести в Ом х м, достаточно умножить на 10-6, так как 1 мм2=10-6 м2.\n\nКак вы видите из таблицы ниже, самым маленьким удельным сопротивлением обладает серебро, поэтому можно сказать, что провод из серебра будет наилучшим проводником в конструировании радиоэлектронных устройств.</string>
    <string name="Sopr9">В электронике есть специальные радиоэлектронные компоненты, которые обладают сопротивлением. Их называют резисторами. \n\nЕсть постоянные резисторы:</string>
    <string name="Sopr10">То есть, их сопротивление всегда постоянно и его нельзя менять. \n\nНа схемах постоянные резисторы обозначаются так:</string>
    <string name="Sopr11">Постоянные резисторы можно соединять параллельно:</string>
    <string name="Sopr12">Чтобы узнать общее сопротивление всех резисторов, нужно воспользоваться формулой, где сопротивление между точками А и В (RAB) и есть то самое R общее</string>
    <string name="Sopr13">Можно соединять последовательно:</string>
    <string name="Sopr14">В этом случае:</string>
    <string name="Sopr15">Существуют также и переменные резисторы. Ими можно управлять и менять сопротивление в диапазоне, который на них написан:</string>
    <string name="VAX1">ВАХ (вольт-амперная характеристика) - зависимость тока от напряжения в каком-либо радиоэлементе. Это может быть резистор, диод, транзистор и другие радиоэлементы. \n\nДавайте разберемся, что представляет из себя зависимость одной величины от другой. Как Вы все помните из школы, в классе пятом-шестом мы строили графики - зависимость У от Х. Так вот, в электронике, чтобы описать зависимость тока от напряжения, вместо У у нас будет сила тока, а вместо Х - напряжение. Получается вот такая система отображения:</string>
    <string name="VAX2">Попробуем начертить график зависимости тока от напряжения для резистора? Для того, чтобы начертить этот график, нам потребуется подавать на резистор напряжение, и смотреть одновременно значение силы тока. С помощью крутилки я добавляю напряжение и записываю значения силы тока для каждого значения напряжения. Для этого берем блок питания, резистор и начинаем делать замеры:</string>
    <string name="VAX3">Вот у нас появилась первая точка на графике: U=0,I=0. Вторая точка: U=2.6, I=0.01. Третья точка: U=4.4, I=0.02. Четвертая точка: U=6.2, I=0.03. Пятая точка: U=7.9, I=0.04. Шестая точка: U=9.6, I=0.05. Седьмая точка: U=11.3, I=0.06. Восьмая точка: U=13, I=0.07. Девятая точка: U=14.7, I=0.08. \n\nДавайте построим график по этим точкам:</string>
    <string name="VAX4">Да у нас получилась почти прямая линия! То, что она чуть-чуть кривая, связано с погрешностью измерений и погрешностью самого прибора. Следовательно, так как у нас получилась прямая линия, то значит такие элементы, как резисторы называются элементами с линейной вольтамперной характеристикой. \n\nКак Вы знаете, диод пропускает электрический ток в одном направлении, и не пропускает в другом направлении. Это свойство диода мы используем в Диодных мостах, а также для проверки диода мультиметром. Давайте же построим ВАХ для диода. Берем блок питания, цепляем его к диоду (плюс на анод, минус на катод) и начинаем точно также делать замеры:</string>
    <string name="VAX5">Первая точка: U=0,I=0. Вторая точка: U=0.4, I=0. Третья точка: U=0.6, I=0.01. Четвертая точка: U=0.7,I=0.03. Пятая точка: U=0.8,I=0.06. Шестая точка: U=0.9,I=0.13. Седьмая точка: U=1, I=0.37. Строим график по полученным значениям:</string>
    <string name="VAX6">Вот это и есть вольт-амперная характеристика диода. На графике мы не видим прямую линию, поэтому такая вольт-амперная характеристика называется нелинейной. Для каждого диода своя ВАХ, где то она круче, где то ближе к оси силы тока (I). Для кремниевых диодов она начинается со значения 0.5-0.7 Вольт, для диодов, сделанных из германия ВАХ начинается со значения 0.3-0.4 Вольта. \n\n Давайте рассмотрим подробнее ВАХ диода. Общая ВАХ диода выглядит вот так:</string>
    <string name="VAX7">На графике, на котором мы с Вами сами строили ВАХ диода, мы начертили только правую часть графика. Почему? Давайте рассмотрим характеристики диода, который мы с Вами пытали. Он называется КД411АМ. Ищем его характеристики в инете:</string>
    <string name="VAX8">Обратное максимальное напряжение Uобр - это такое напряжение диода, которое он выдерживает при подключении в обратном направлении. При этом через него будет протекать ток Iобр - сила тока при обратном подключении диода. При превышении обратного напряжения в диоде возникает так называемый лавинный пробой, в результате этого резко возрастает ток, что может привести к полному тепловому разрушению диода. В нашем исследуемом диоде это напряжение 700 Вольт. Поэтому я бы никак не смог показать Вам лавинный пробой с помощью своего блока питания, который выдает максимум 15 Вольт. Максимальный прямой ток Iпр - это максимальный ток, который может течь через диод. В нашем случае это 2 Ампера. Если продолжить ветку ВАХ на нашем графике, то можно сказать, что прямое напряжение не должно превышать на таком диоде приблизительно 1,4 Вольта. Так же есть такой параметр, как максимальная частота F, которую нельзя превышать. Если скажем у нас в сети частота 50 Гц, то в некоторых устройствах и приборах с помощью разных схем увеличивают частоту до Гигагерц. В таких схемах такой диод использовать нельзя, потому как его максимальная частота, при котором он может эксплуатироваться, это 30 000 Гц. \n\nСтабилитроны же работают в режиме лавинного пробоя. Выглядят они также, как и диоды, поэтому надо обязательно читать маркировку и смотреть в справочниках, чтобы точно знать, что за радиоэлемент перед вами.</string>
    <string name="VAX9">То есть мы подключаем его как диод в обратном направлении: на анод минус, а на катод - плюс. В результате этого, напряжение на стабилитроне остается почти таким же, а сила тока может меняться в зависимости от подключаемой нагрузки на стабилитроне. Как говорят электронщики, мы используем в стабилитроне обратную ветвь ВАХ:</string>
    <string name="VAX10">ВАХ - очень удобная вещь. Взглянув на нее, можно с легкостью сказать, как поведет себя тот или иной радиоэлемент в схеме. ВАХ строится также для транзисторов, грубо говоря, для каждого вывода, а также для других разновидностей диодов: динисторов, тиристоров, симисторов. Все эти элементы с нелинейной ВАХ, поэтому они называются нелинейными. \n\nПрежде чем использовать в схемах какой-либо диод, посмотрите его характеристики, и конечно же ветку ВАХ. ВАХ - это как для гостей Москвы карта метро.</string>
</resources>